--- a/samples/world.html
+++ b/samples/world.html
@@ -49,7 +49,7 @@
 		<div id="select-continent" style="text-align:center;position:relative;bottom:30px;font-family:sans-serif;font-weight:bold;color:#666666;">Please select a region.</div>
 		
 		<!--Use this to display data-->
-		<!--<div id="description-box" style="position:absolute;width:200px;height:300px;background-color:#fff;top:60px;left:380px;border:1px solid #e0e0e0;border-radius:5px;text-align:center;font-family:sans-serif;">
+		<!--<div id="description-box" style="position:absolute;width:200px;height:300px;background-color:#fff;top:60px;left:380px;border:1px solid #e0e0e0;text-align:center;font-family:sans-serif;">
 			<span id="text">Initial Text</span>
 		</div>-->
 	</div>
