--- a/samples/world.html
+++ b/samples/world.html
@@ -49,7 +49,7 @@
 					if(countryMap[code]=="northAmerica"){
 						dX=-200;dY=-200;dS=1.5;
 					}
-					if(countryMap[code]=="australia"){
+					if(countryMap[code]=="Australia"){
 						dX=470;dY=300;dS=2;
 					}
 					if(countryMap[code]=="southAmerica"){
@@ -59,11 +59,14 @@
 					isZoom=true;
 				}
 				else{
-					zoomOutOnContinent(dX,dY,dS);
-					isZoom=false;
+					//zoomOutOnContinent(dX,dY,dS);
+					//isZoom=false;
+					countrySelected = true;
+					selectedCode = code;
 				}
 				
 				// zoomInOnContinent ();
+				setRegion(code);
 				displayBoxText(code);
 				setRegionColors();
 			}
@@ -75,10 +78,10 @@
   <body>
   	<div id="map-holder" style="width: 600px; height: 400px;">
 		<div id="vmap" style="width: 600px; height: 400px;border:1px solid #000;"></div>
-		<div id="select-continent" style="text-align:center;position:relative;bottom:30px;font-family:sans-serif;font-weight:bold;color:#666666;">Please select a region.</div>
+		<div id="select-continent" style="text-align:center;position:relative;bottom:30px;font-family:sans-serif;font-weight:bold;color:#666666;">Please select a continent.</div>
 		
 		<!--Use this to display data-->
-		<div id="description-box" style="position:absolute;width:200px;height:300px;background-color:#990000;top:60px;left:380px;border:3px solid #6a0000;text-align:center;font-family:sans-serif;color:#fff">
+		<div id="description-box" style="position:absolute;width:200px;height:300px;background-color:#fff;top:60px;left:380px;border:4px solid #990000;text-align:center;font-family:sans-serif;color:#990000;border-radius:10px;box-shadow: 0px 0px 15px #888888;">
 			<span id="text">Initial Text</span>
 		</div>
 	</div>
