fixed clicking on irrelevant continents

--- a/samples/world.html
+++ b/samples/world.html
@@ -36,7 +36,7 @@
 			},
 			onRegionClick: function (element, code, region)
 			{
-				if(!isZoom){
+				if(!isZoom){ //first click; zooms in
 					if(countryMap[code]=="Asia"){
 						dX=280;dY=-100;dS=1.3;
 					}
@@ -57,18 +57,18 @@
 					}
 					zoomInOnContinent(dX,dY,dS);
 					isZoom=true;
+					setRegion(code);
+					setRegionColors();
 				}
-				else{
+				else{ //second click on country
 					//zoomOutOnContinent(dX,dY,dS);
 					//isZoom=false;
 					countrySelected = true;
 					selectedCode = code;
+					displayBoxText(code);
 				}
 				
 				// zoomInOnContinent ();
-				setRegion(code);
-				displayBoxText(code);
-				setRegionColors();
 			}
 		});
 		document.getElementById("description-box").style.display = "none";
