--- a/samples/world.html
+++ b/samples/world.html
@@ -4,13 +4,19 @@
   <head>
 	<title>JQVMap Test</title>
 	
+	<!-- CSS -->
 	<link href="../jqvmap/jqvmap.css" media="screen" rel="stylesheet" type="text/css" />
 	
+	<!-- JS -->
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
 	<script src="../jqvmap/jquery.vmap.js" type="text/javascript"></script>
 	<script src="../jqvmap/maps/jquery.vmap.world.js" type="text/javascript"></script>
 	<script src="../jqvmap/maps/jquery.vmap.continents.js" type="text/javascript"></script>
 	<script src="../jqvmap/data/jquery.vmap.sampledata.js" type="text/javascript"></script>
+	<script src="../jqvmap/data/jquery.vmap.programdata.js" type="text/javascript"></script>
+
+	<!-- FONTS -->
+	<link href='http://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
 	
 	<script type="text/javascript">
 	jQuery(document).ready(function() {
@@ -61,8 +67,7 @@
 					setRegionColors();
 				}
 				else{ //second click on country
-					//zoomOutOnContinent(dX,dY,dS);
-					//isZoom=false;
+					$('#description-box').html('');
 					countrySelected = true;
 					selectedCode = code;
 					displayBoxText(code);
@@ -96,12 +101,13 @@
 			width:200px;
 			height:350px;
 			background-color:#fff;
-			border:4px solid #990000;
+			/*border:4px solid #990000;*/
 			text-align:center;
 			font-family:sans-serif;
 			color:#990000;
 			border-radius:10px;
 			box-shadow: 0px 0px 15px #888888;
+			opacity: 0.9;
 		}
 
 		.left {
@@ -113,17 +119,53 @@
 			top:30px;
 			left:480px;
 		}
+
+		#modal-header {
+			font-family: 'Lora', serif;
+			font-size: 22px;
+			color: #fff;
+			height: 50px;
+			width: 100%;
+			background-color: #990000;
+			border-top-left-radius: 10px;
+			border-top-right-radius: 10px;
+  			line-height: 50px;
+			vertical-align: middle;
+		}
+
+		.term-programs {
+			margin: 10px;
+		}
+
+		.subheader {
+			color: #505050;
+			font-weight: bold;
+			font-size: 18px;
+		}
+
+		.programs {
+			box-sizing: border-box;
+			padding: 5px;
+			font-size: 15px;
+		}
+
+		.programs:hover {
+			opacity: 0.7;
+		}
+
+		.programs a {
+			text-decoration: none;
+			color: #990000;
+		}
 	</style>
-  </head>
-  <body>
+</head>
+<body>
   	<div id="map-holder" style="width: 600px; height: 400px;">
 		<div id="vmap"></div>
 		<div id="directions">Please select a region.</div>
 		
 		<!--Use this to display data-->
-		<div id="description-box">
-			<span id="text">Initial Text</span>
-		</div>
+		<div id="description-box"></div>
 	</div>
   </body>
 </html>
