--- a/samples/world.html
+++ b/samples/world.html
@@ -133,6 +133,13 @@
 			vertical-align: middle;
 		}
 
+		#program-holder {
+			position: static;
+			height: 300px;
+			overflow-y: scroll;
+			overflow-x: hidden;
+		}
+
 		.term-programs {
 			margin: 10px;
 		}
@@ -151,12 +158,31 @@
 
 		.programs:hover {
 			opacity: 0.7;
+			background-color: #F0F0F0;
 		}
 
 		.programs a {
 			text-decoration: none;
 			color: #990000;
 		}
+
+		#program-holder::-webkit-scrollbar {
+		    width: 8px;
+		}
+
+		#program-holder::-webkit-scrollbar-track {  
+		    background-color: #eaeaea; 
+		}  
+
+		#program-holder::-webkit-scrollbar-thumb {  
+		    background-color: #ccc;  
+		    border: 1px solid #B2B2B2;
+		    border-radius: 5px;
+		}  
+
+		#program-holder::-webkit-scrollbar-thumb:hover {  
+		    background-color: #E6E6E6;  
+		}  
 	</style>
 </head>
 <body>
