--- a/samples/world.html
+++ b/samples/world.html
@@ -102,7 +102,6 @@
 			height:350px;
 			background-color:#fff;
 			/*border:4px solid #990000;*/
-			text-align:center;
 			font-family:sans-serif;
 			color:#990000;
 			border-radius:10px;
@@ -123,6 +122,7 @@
 		#modal-header {
 			font-family: 'Lora', serif;
 			font-size: 22px;
+			text-align:center;
 			color: #fff;
 			height: 50px;
 			width: 100%;
@@ -144,26 +144,33 @@
 			margin: 10px;
 		}
 
-		.subheader {
+		.term-programs .subheader {
 			color: #505050;
 			font-weight: bold;
 			font-size: 18px;
+			text-align: center;
+			border-bottom: 1px solid #990000;
 		}
 
 		.programs {
 			box-sizing: border-box;
 			padding: 5px;
-			font-size: 15px;
+			font-size: 14px;
+			text-align:left;
 		}
 
 		.programs:hover {
 			opacity: 0.7;
-			background-color: #F0F0F0;
+			background-color: #fadbdb;
 		}
 
-		.programs a {
+		.program-link {
 			text-decoration: none;
 			color: #990000;
+		}
+
+		.programs img {
+			margin-right: 10px;
 		}
 
 		#program-holder::-webkit-scrollbar {
@@ -183,6 +190,12 @@
 		#program-holder::-webkit-scrollbar-thumb:hover {  
 		    background-color: #E6E6E6;  
 		}  
+
+		.program-name {
+			display: inline-block;
+			width: 150px;
+			vertical-align: top;
+		}
 	</style>
 </head>
 <body>
