--- a/samples/world.html
+++ b/samples/world.html
@@ -96,6 +96,14 @@
 			color:#666666;
 		}
 
+		.center-text {
+			text-align: center;
+		}
+
+		.center-left {
+			text-align: left;
+		}
+
 		#description-box {
 			position:absolute;
 			width:200px;
@@ -122,7 +130,6 @@
 		#modal-header {
 			font-family: 'Lora', serif;
 			font-size: 22px;
-			text-align:center;
 			color: #fff;
 			height: 50px;
 			width: 100%;
@@ -148,7 +155,6 @@
 			color: #505050;
 			font-weight: bold;
 			font-size: 18px;
-			text-align: center;
 			border-bottom: 1px solid #990000;
 		}
 
@@ -156,7 +162,6 @@
 			box-sizing: border-box;
 			padding: 5px;
 			font-size: 14px;
-			text-align:left;
 		}
 
 		.programs:hover {
