--- a/samples/world.html
+++ b/samples/world.html
@@ -65,6 +65,7 @@
 					isZoom=true;
 					setRegion(code);
 					setRegionColors();
+					$('#directions').text('Please select a country.');
 				}
 				else{ //second click on country
 					$('#description-box').html('');
@@ -72,11 +73,10 @@
 					selectedCode = code;
 					displayBoxText(code);
 				}
-				
-				// zoomInOnContinent ();
 			}
 		});
 		document.getElementById("description-box").style.display = "none";
+		$('#directions').text('Please select a continent.');
 	});
 	</script>
 
@@ -84,11 +84,12 @@
 		#vmap {
 			width: 700px; 
 			height: 400px;
-			border:1px solid #000;
+			border:1px solid #aaa;
 		}
 
 		#directions {
-			text-align:center;
+			width: 100%;
+			text-align: center;
 			position:relative;
 			bottom:30px;
 			font-family:sans-serif;
@@ -204,9 +205,9 @@
 	</style>
 </head>
 <body>
-  	<div id="map-holder" style="width: 600px; height: 400px;">
+  	<div id="map-holder" style="width: 700px; height: 400px;">
 		<div id="vmap"></div>
-		<div id="directions">Please select a region.</div>
+		<div id="directions"></div>
 		
 		<!--Use this to display data-->
 		<div id="description-box"></div>
