--- a/samples/world.html
+++ b/samples/world.html
@@ -19,9 +19,9 @@
 	<link href='http://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
 	
 	<script type="text/javascript">
+	var isZoom=false;
+	var dX,dY,dS;
 	jQuery(document).ready(function() {
-		var isZoom=false;
-		var dX,dY,dS;
 		jQuery('#vmap').vectorMap({
 			map: 'world_en',
 			backgroundColor: '#ffffff',
@@ -65,7 +65,7 @@
 					isZoom=true;
 					setRegion(code);
 					setRegionColors();
-					$('#directions').text('Please select a country.');
+					$('#directions').text('Please select a country');
 				}
 				else{ //second click on country
 					$('#description-box').html('');
@@ -76,138 +76,24 @@
 			}
 		});
 		document.getElementById("description-box").style.display = "none";
-		$('#directions').text('Please select a continent.');
+		document.getElementById("backButton").style.display = "none";
+		$('#directions').text('Please select a continent');
 	});
+
+	function backButtonClick(){
+		if(isZoom){
+			zoomOutOnContinent(dX,dY,dS);
+			isZoom=false;
+			$('#vmap').vectorMap('set', 'colors', test);
+		}
+	}
 	</script>
-
-	<style type="text/css">
-		#vmap {
-			width: 700px; 
-			height: 400px;
-			border:1px solid #aaa;
-		}
-
-		#directions {
-			width: 100%;
-			text-align: center;
-			position:relative;
-			bottom:30px;
-			font-family:sans-serif;
-			font-weight:bold;
-			color:#666666;
-		}
-
-		.center-text {
-			text-align: center;
-		}
-
-		.center-left {
-			text-align: left;
-		}
-
-		#description-box {
-			position:absolute;
-			width:200px;
-			height:350px;
-			background-color:#fff;
-			/*border:4px solid #990000;*/
-			font-family:sans-serif;
-			color:#990000;
-			border-radius:10px;
-			box-shadow: 0px 0px 15px #888888;
-			opacity: 0.9;
-		}
-
-		.left {
-			top:30px;
-			left:30px;
-		}
-
-		.right {
-			top:30px;
-			left:480px;
-		}
-
-		#modal-header {
-			font-family: 'Lora', serif;
-			font-size: 22px;
-			color: #fff;
-			height: 50px;
-			width: 100%;
-			background-color: #990000;
-			border-top-left-radius: 10px;
-			border-top-right-radius: 10px;
-  			line-height: 50px;
-			vertical-align: middle;
-		}
-
-		#program-holder {
-			position: static;
-			height: 300px;
-			overflow-y: scroll;
-			overflow-x: hidden;
-		}
-
-		.term-programs {
-			margin: 10px;
-		}
-
-		.term-programs .subheader {
-			color: #505050;
-			font-weight: bold;
-			font-size: 18px;
-			border-bottom: 1px solid #990000;
-		}
-
-		.programs {
-			box-sizing: border-box;
-			padding: 5px;
-			font-size: 14px;
-		}
-
-		.programs:hover {
-			opacity: 0.7;
-			background-color: #fadbdb;
-		}
-
-		.program-link {
-			text-decoration: none;
-			color: #990000;
-		}
-
-		.programs img {
-			margin-right: 10px;
-		}
-
-		#program-holder::-webkit-scrollbar {
-		    width: 8px;
-		}
-
-		#program-holder::-webkit-scrollbar-track {  
-		    background-color: #eaeaea; 
-		}  
-
-		#program-holder::-webkit-scrollbar-thumb {  
-		    background-color: #ccc;  
-		    border: 1px solid #B2B2B2;
-		    border-radius: 5px;
-		}  
-
-		#program-holder::-webkit-scrollbar-thumb:hover {  
-		    background-color: #E6E6E6;  
-		}  
-
-		.program-name {
-			display: inline-block;
-			width: 150px;
-			vertical-align: top;
-		}
-	</style>
 </head>
 <body>
   	<div id="map-holder" style="width: 700px; height: 400px;">
 		<div id="vmap"></div>
 		<div id="directions"></div>
+		<div id="backButton" onClick="backButtonClick();">Back</div>
 		
 		<!--Use this to display data-->
 		<div id="description-box"></div>
